# smarthome-env

./: Dockerfile  LICENSE  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  main.py
