[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build-meta"

[project]
name = "smarthome_env"
version = "1.0.0"
description = "A real-world Smart Home Energy Optimization environment for OpenEnv."
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "httpx"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]